docs/specs/0.1.4/spec.md
# vTON DAO Governance Model — 0.1.4

## 1. 개요

본 문서는 Tokamak Network의 DAO 거버넌스 모델을 정의한다. Tokamak Network Economics Whitepaper V2에서 제시한 검증 경제학(Verification Economics)과 TON Staking V3 모델을 기반으로, 분산화된 의사결정 구조를 구축한다. 이를 위한 핵심 설계 원칙으로 다음을 적용한다:

- TON과 vTON의 역할 분리를 통해 경제적 기능과 거버넌스 기능 간의 충돌을 방지한다.
- 투표권 집중을 구조적으로 제한하여 소수에 의한 거버넌스 장악을 방지한다.
- Security Council을 통해 긴급 상황에 신속히 대응하되, 권한 남용을 방지한다.

## 2. TOKEN (vTON)

### 2.1 vTON 정의

vTON은 Tokamak Network의 거버넌스 토큰이다. TON은 경제적 유틸리티(가스, 담보, 브릿지)를 담당하고, vTON은 투표권으로 활용된다. 두 토큰의 역할 분리를 통해 경제적 기능과 거버넌스 기능 간의 충돌을 방지한다.

### 2.2 vTON Distribution

vTON은 시뇨리지를 받는 주체에게 시뇨리지 비율에 따라 분배된다. 시뇨리지는 L2 Operator, Validator, DAO Treasury 세 주체가 받으며, vTON은 L2 Operator와 Validator 두 주체에게 분배된다.

| 수령 주체 | 시뇨리지 (TON) | vTON |
|----------|---------------|------|
| L2 Operator (시퀀서) | ✓ | ✓ |
| Validator | ✓ | ✓ |
| DAO Treasury | ✓ | ✗ |

DAO Treasury는 시뇨리지를 수령하지만 vTON은 받지 않는다. Treasury의 주요 용도는 생태계 그랜트, 운영 비용, 유동성 공급, 비상 대응 등 경제적 지출이며, 이는 TON으로 충당된다. vTON은 투표권인데, Treasury가 이를 보유하면 "그 투표권을 누가 대신 행사할 것인가?"를 또 투표로 정해야 하는 불필요한 복잡성이 생긴다. Treasury는 자금을 보관하고 운용하는 역할이지 스스로 의사결정을 내리는 주체가 아니므로, vTON을 배제하는 것이 적절하다.

### 2.3 발행 방식

최대 공급량 100,000,000 vTON (100M)의 상한을 두고, 에폭 기반 반감기 메커니즘을 적용한다. 총 공급량(totalSupply)이 에폭 경계(5M vTON 단위)를 넘을 때마다 발행 비율이 자동으로 25%씩 감소하여 거버넌스 토큰의 장기적 희소성을 확보한다.

#### 반감기 상수

| 상수 | 값 | 설명 |
|------|-----|------|
| MAX_SUPPLY | 100,000,000 vTON | 최대 총 공급량 |
| EPOCH_SIZE | 5,000,000 vTON | 에폭 크기 |
| DECAY_RATE | 0.75 | 에폭당 감소율 (25% 감소) |
| INITIAL_HALVING_RATE | 1.0 | 초기 반감기 비율 (1 TON = 1 vTON) |
| MAX_EPOCHS | 20 | 최대 에폭 수 (100M / 5M) |

#### 발행 공식

에폭은 현재 총 공급량에 따라 결정된다:

```
epoch = totalSupply / EPOCH_SIZE
halvingRatio = INITIAL_HALVING_RATE × DECAY_RATE^epoch
```

실제 발행량은 반감기 비율과 발행 비율의 이중 적용으로 산출된다:

```
실제 발행량 = 요청량 × halvingRatio × emissionRatio
```

에폭 경계 처리는 비트코인 방식을 따르며, 민팅 시점의 totalSupply로 에폭을 결정한다 (경계 분할 없음). 공급량 상한에 도달하면 남은 양만 발행되며, totalSupply가 MAX_SUPPLY 이상이면 발행이 중단된다.

#### 발행 비율 파라미터

DAO가 시뇨리지 대비 vTON 발행 비율을 별도로 조정할 수 있다. 반감기 비율과 독립적으로 적용되며, 0으로 설정하면 신규 발행이 중단된다.

| 파라미터 | 초기값 | 범위 | 설명 |
|---------|--------|------|------|
| vTON 발행 비율 (emissionRatio) | 1 | 0 ~ 1 | 시뇨리지 대비 vTON 발행 비율 |

### 2.4 Tradeable

vTON은 거래가 가능하다. vTON 보유자는 직접 delegate에게 위임하는 대신, 투표권을 필요로 하는 다른 참여자에게 vTON을 판매할 수 있다. 이를 통해 거버넌스 참여에 관심이 없는 보유자도 경제적 가치를 실현할 수 있고, 적극적인 거버넌스 참여를 원하는 주체는 시장에서 투표권을 확보할 수 있다.

## 3. VOTING MECHANISM

### 3.1 Delegation

거버넌스 제안은 기술적 복잡성, 경제적 영향, 보안 고려사항 등 다양한 전문 지식을 요구한다. 모든 vTON 보유자가 각 안건을 충분히 검토할 시간과 전문성을 갖추기는 현실적으로 어렵다. Delegation은 이 문제를 해결한다. 보유자는 자신의 투표권을 신뢰할 수 있는 전문가에게 위임하고, delegate는 위임받은 투표권을 바탕으로 안건을 분석하고 의사결정에 참여한다.

### 3.2 Delegate 등록

Delegate가 되려면 다음 정보를 공개적으로 등록해야 한다:

| 항목 | 설명 |
|------|------|
| Name | 커뮤니티 내 식별 및 인지도 구축 |
| About me | 배경과 전문성 공유를 통한 신뢰 형성 |
| Why I want to be a delegate | 투표 철학과 목표 공개로 위임자의 선택 지원 |
| Address or ENS | 온체인 투표 실행을 위한 지갑 연결 |

이 요건은 시빌 공격을 억제한다. 익명 지갑 여러 개를 만드는 것은 쉽지만, 각각의 delegate로서 커뮤니티의 신뢰를 얻어 위임을 받는 것은 어렵기 때문이다.

### 3.3 Delegation 방식

vTON 보유자는 직접 투표할 수 없으며, 반드시 delegate에게 위임해야 한다. 위임하지 않은 vTON은 투표권으로 행사되지 않는다.

본인이 직접 투표권을 행사하려면 delegate로 등록해야 하며, 이 경우에도 동일한 등록 요건이 적용된다.

Operator와 Validator도 시뇨리지로 받은 vTON을 delegate에게 위임해야 한다. 자신이 delegate로 등록하여 본인에게 위임할 수도 있고, 다른 delegate에게 위임할 수도 있다.

위임은 언제든 철회(undelegate)하고 다른 delegate에게 재위임할 수 있다.

### 3.4 투표권 산정

vTON을 delegate에게 위임하면 해당 시점이 온체인에 기록되며, 위임 즉시 투표권으로 활성화된다. 위임은 언제든 철회하고 다른 delegate에게 재위임할 수 있다.

### 3.5 Proposal Creation

제안을 생성하려면 보유한 vTON과 위임받은 vTON의 합이 전체 vTON 발행량의 0.25% 이상이어야 한다. 이는 스팸 제안을 방지하면서도 충분한 투표력을 가진 주체만 제안할 수 있도록 한다. 실제로 이 수준의 투표력을 가진 주체는 대부분 delegate이므로, 일반적으로 delegate가 제안을 생성하게 된다.

| 파라미터 | 초기값 | 설명 |
|---------|--------|------|
| 제안 생성 기준 | 0.25% | 제안 생성에 필요한 최소 투표력 (보유 + 위임받은 vTON, 전체 발행량 대비) |

해당 설정값은 DAO 투표를 통해 변경할 수 있다.

### 3.6 Voting Period

RFC (7일+) → Snapshot 투표 (5일) → 검토 기간 (3일) → 온체인 투표 (7일) → Timelock (7일) → 실행의 단계를 거친다.

| 단계 | 기간 | 목적 | 활동 |
|------|------|------|------|
| RFC | 최소 7일 | 커뮤니티 의견 수렴 | 초안 작성, 피드백 반영 |
| Snapshot 투표 | 5일 | 온체인 진행 여부 결정 | 오프체인 찬반 투표 |
| 검토 기간 | 3일 | 스냅샷 준비, 위임 조정 | 제안 확정 |
| 온체인 투표 | 7일 | 최종 실행 승인 | Yes/No/Abstain 투표 |
| Timelock | 7일 | 비상 대응, 보안 검토 | Security Council 검토 |

### 3.7 Quorum

투표가 유효하려면 전체 위임된 vTON의 최소 정족수가 투표에 참여해야 한다. 쿼럼을 충족하지 못하면 제안은 자동으로 부결된다.

| 파라미터 | 초기값 | 설명 |
|---------|--------|------|
| Quorum | 4% | 투표에 참여해야 하는 최소 vTON 비율 (전체 위임된 vTON 대비) |

해당 설정값은 DAO 투표를 통해 변경할 수 있다.

### 3.8 Pass Rate

정족수를 충족한 상태에서 찬성이 가결 기준을 넘으면 제안이 통과된다. 기권은 정족수 계산에는 포함되지만 가결 여부 판정에는 포함되지 않는다.

| 파라미터 | 초기값 | 설명 |
|---------|--------|------|
| Pass Rate | 과반수 | 정족수 충족 시 제안 통과에 필요한 찬성 비율 |

해당 설정값은 DAO 투표를 통해 변경할 수 있다.

### 3.9 Proposal Lifecycle

제안은 다음 상태를 순차적으로 거친다:

| 상태 | 설명 |
|------|------|
| Pending | 투표 시작 대기 중 |
| Active | 투표 진행 중 |
| Succeeded | 가결됨 (찬성 > 반대 + 정족수 충족) |
| Queued | Timelock 대기 중 |
| Executed | 실행 완료 |
| Defeated | 부결됨 (정족수 미달 또는 반대 ≥ 찬성) |
| Canceled | 제안자 또는 Security Council에 의해 취소됨 |
| Expired | Grace Period 내 execute() 미호출 시 발생 |

#### 상태 전이

| 흐름 | 전이 | 조건 |
|------|------|------|
| 정상 | Pending → Active → Succeeded → Queued → Executed | - |
| 부결 | Active → Defeated | 정족수 미달 또는 반대 ≥ 찬성 |
| 만료 | Queued → Expired | Grace Period 내 execute() 미호출 |
| 취소 | Pending/Active/Succeeded/Queued → Canceled | 제안자 또는 Security Council |

#### 기간 설정

해당 설정값은 DAO 투표를 통해 변경할 수 있다.

| 파라미터 | 초기값 | 설명 |
|---------|--------|------|
| Voting Delay | 1일 | 제안 생성 후 투표 시작까지 대기 기간 |
| Voting Period | 7일 | 투표 진행 기간 |
| Timelock Delay | 7일 | queue() 호출 후 실행까지 최소 대기 기간 |
| Grace Period | 14일 | Timelock Delay 이후 실행 가능 기간 |

#### Timelock Delay

가결된 제안이 즉시 실행되는 것을 방지한다. 이 기간 동안 커뮤니티는 제안을 최종 검토하고, Security Council은 악의적 제안을 취소할 수 있다. 또한 사용자는 불리한 변경에 대비해 자산을 이동할 시간을 확보한다.

#### Grace Period

실행 가능 기간의 상한선이다. Timelock Delay 종료 후 14일 내에 execute()가 호출되지 않으면 제안은 Expired 상태로 전환된다.

#### 취소 권한

| 주체 | 취소 가능 상태 | 비고 |
|------|---------------|------|
| 제안자 | Pending, Active | 본인 제안만 취소 가능 |
| Security Council | Pending, Active, Succeeded, Queued | 긴급 상황 대응 (자기방어 제한 적용, 4.2 참조) |

## 4. SECURITY COUNCIL

Security Council은 거버넌스의 안전장치(safety net)로서 악의적 제안을 차단하고 긴급 시 프로토콜을 정지하는 역할을 한다. 단, Security Council은 거버넌스를 "차단"할 수만 있고 "실행"할 수는 없다. 이 원칙을 통해 Security Council이 침해되었을 때의 피해 범위를 최소화한다.

### 4.1 구성원 수와 실행 임계값

주요 L2 프로토콜의 Security Council은 일반적으로 8명 이상으로 구성된다. Arbitrum은 12명(9/12 임계값), Optimism은 13명(10/13 임계값)을 운영하고 있으며, L2Beat는 Stage 1 요건으로 최소 8명 이상, 75% 초과 임계값을 권고한다.

Tokamak Network의 초기 Security Council은 3명으로 구성한다. 재단 1명과 외부 파트너 2명으로 이루어지며, 외부가 과반을 차지하므로 재단이 단독으로 결정할 수 없다. 이는 프로젝트 초기 규모에 적합한 최소 구성이며, 네트워크 성장에 따라 업계 표준 수준으로 점진적으로 확대할 계획이다.

| 구분 | 초기 구성 |
|------|----------|
| 총 구성원 | 3명 |
| 재단 | 1명 |
| 외부 파트너 | 2명 |
| 실행 임계값 | 2/3 (67%) |

### 4.2 권한

Security Council은 **Veto(거부) + Pause(정지)** 두 가지 권한만을 갖는다.

| 권한 | 설명 | 실행 방식 |
|------|------|----------|
| 악의적 제안 취소 (Veto) | 거버넌스 제안을 거부할 수 있다 | DAOGovernor.cancel() 경유 |
| 프로토콜 일시정지 (Pause) | 긴급 상황 시 거버넌스 기능을 중단할 수 있다 | DAOGovernor.pause() 직접 호출 |
| 프로토콜 재개 (Unpause) | 일시정지를 해제한다 | DAOGovernor.unpause() 직접 호출 |

이 권한들은 일반 거버넌스 프로세스를 우회하여 즉시 실행된다. 단, 모든 긴급 조치는 사후에 커뮤니티에 공개되어야 한다.

#### Veto-Only 원칙

Security Council은 **임의의 트랜잭션을 직접 실행하는 권한(Direct Execution)을 갖지 않는다.** 이는 다음 근거에 기반한다:

1. **침해 시 피해 범위 최소화**: Veto-only SC가 침해되면 "좋은 제안을 차단"하는 것이 최악의 시나리오이다. 반면 Direct Execution 권한이 있는 SC가 침해되면 프로토콜 자체가 위험에 처한다.

2. **SC 규모에 비례하는 권한**: 3명/2명 승인 구조에서 2개의 키만 침해되면 SC의 모든 권한이 탈취된다. Arbitrum(12명, 9명 승인)처럼 높은 임계값을 가진 경우에만 넓은 권한이 정당화된다.

3. **프로토콜 특성**: Tokamak DAO v2의 컨트랙트(vTON, DelegateRegistry, DAOGovernor, Timelock)는 모두 non-upgradeable이며, owner는 Timelock이다. 예상되는 긴급 상황(거버넌스 공격, flash loan 등)은 모두 Veto + Pause로 대응 가능하다.

4. **선례**: Compound(Proposal Guardian 6개월 만료), ENS(Cancel-only + 2년 만료)가 이 모델을 채택하고 있다.

#### 자기방어 제한

Security Council은 자기 자신을 대상으로 하는 제안을 취소할 수 없다. 이는 SC가 자신의 교체·해임 제안을 차단하여 영구적 권한을 유지하는 것을 방지한다.

자기방어 제한은 온체인에서 강제된다. DAOGovernor.cancel() 호출 시 제안의 target 주소에 SC 자신이 포함되어 있으면 취소가 거부된다.

SC의 제안 취소는 반드시 DAOGovernor.cancel()을 경유해야 한다. Timelock에 대한 직접적인 cancelTransaction() 권한은 부여되지 않으며, 이를 통해 자기방어 체크의 우회를 구조적으로 차단한다.

### 4.3 외부 파트너

초기 외부 파트너는 재단이 지명한다. 이후 DAO가 성장하면 DAO 투표를 통해 선출하는 방식으로 전환한다. 외부 파트너의 자격 요건은 추후 DAO 거버넌스를 통해 정의한다.

### 4.4 임기 및 만료

Security Council의 권한은 12개월의 유효기간을 가지며, 만료 후에는 DAO 거버넌스 제안을 통해 갱신해야 한다.

| 파라미터 | 초기값 | 설명 |
|---------|--------|------|
| SC 권한 유효기간 | 12개월 | 만료 후 Veto/Pause 권한 자동 소멸 |

만료 메커니즘의 특성:

- **Permissionless 해제**: 유효기간 경과 후 누구나 만료를 트리거할 수 있다. SC의 동의나 거버넌스 제안이 불필요하다.
- **갱신 절차**: 만료 전에 DAO 거버넌스 제안으로 새로운 유효기간을 설정한다. 갱신 제안은 SC의 자기방어 제한 대상이 아니므로, SC가 갱신 제안을 차단할 수 없다.
- **만료 시 영향**: 만료 후 SC는 제안 취소 및 프로토콜 일시정지 권한을 상실한다. 기존 거버넌스 프로세스는 SC 없이 정상 운영된다.

이 메커니즘은 SC가 자신의 교체 제안을 차단하더라도 권한이 자동으로 소멸되는 것을 보장한다. Compound(6개월 만료)와 ENS(2년 만료, permissionless 해제)의 검증된 패턴을 따른다.

### 4.5 해임 절차

Security Council 구성원의 변경(해임 및 선출)은 DAO 투표를 통해 결정된다. SC 구성원 변경 제안에 대해서는 자기방어 제한이 적용되므로, Security Council이 거부권을 행사할 수 없다.

## 5. DAO 파라미터

다음은 DAO 투표를 통해 조정할 수 있는 파라미터들이다.

| 카테고리 | 파라미터 | 초기값 | 범위/설명 | 관련 섹션 |
|---------|---------|--------|----------|----------|
| 토큰 발행 | vTON 발행 비율 (emissionRatio) | 1 | 0 ~ 1 | 2.3 |
| 제안 | 제안 생성 기준 | 0.25% | 보유 + 위임받은 vTON, 전체 발행량 대비 | 3.5 |
| 제안 | 제안 생성 비용 | 10 TON | 소각 | 3.5 |
| 투표 | Quorum | 4% | 전체 위임된 vTON 대비 | 3.7 |
| 투표 | Pass Rate | 과반수 | 찬성/(찬성+반대) > 50% | 3.8 |
| 투표 | Voting Delay | 1일 | 제안 생성 후 대기 | 3.9 |
| 투표 | Voting Period | 7일 | 투표 진행 기간 | 3.9 |
| 투표 | Timelock Delay | 7일 | 실행 전 대기 | 3.9 |
| 투표 | Grace Period | 14일 | 실행 가능 기간 | 3.9 |
| Security Council | 구성원 수 | 3명 | - | 4.1 |
| Security Council | 실행 임계값 | 2/3 (67%) | - | 4.1 |
| Security Council | 권한 유효기간 | 12개월 | permissionless 만료 | 4.4 |
